# wreq-util

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/: emulation.rs  emulation_option.rs  emulation_rand.rs  impersonate.rs  set_emulation.rs
src/: lib.rs
src/emulation/: mod.rs  rand.rs
src/emulation/device/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/emulation/device/chrome/: header.rs  macros.rs  mod.rs  tls.rs
src/emulation/device/firefox/: macros.rs  mod.rs  tls.rs
src/emulation/device/okhttp/: macros.rs  mod.rs
src/emulation/device/opera/: macros.rs  mod.rs  tls.rs
src/emulation/device/safari/: macros.rs  mod.rs  tls.rs
src/imp/: chrome.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
tests/: client.rs  emulation_chrome.rs  emulation_firefox.rs  emulation_okhttp.rs  emulation_safari.rs
tests/support/: mod.rs
