[package]
name = "rquest-util"
description = "Common utilities for rquest"
repository = "https://github.com/0x676e67/rquest-util"
documentation = "https://docs.rs/rquest-util"
authors = ["0x676e67 <gngppz@gmail.com>"]
version = "0.1.0"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.80"

[features]
default = ["emulation", "gzip", "brotli", "deflate", "zstd"]
emulation = ["dep:http", "dep:serde", "dep:typed-builder"]
gzip = ["rquest/gzip"]
brotli = ["rquest/brotli"]
deflate = ["rquest/deflate"]
zstd = ["rquest/zstd"]

[dependencies]
http = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-builder = { version = "0.20.0", optional = true }
rquest = { git = "https://github.com/0x676e67/rquest", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
doctest = false

[[example]]
name = "emulation"
path = "examples/emulation.rs"
required-features = ["emulation", "gzip", "brotli", "deflate", "zstd", "rquest/full"]
