[package]
name = "rquest-util"
description = "Common utilities for rquest"
repository = "https://github.com/0x676e67/rquest-util"
documentation = "https://docs.rs/rquest-util"
authors = ["0x676e67 <gngppz@gmail.com>"]
version = "0.2.0-rc1"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.80"

[features]
default = ["emulation", "gzip", "brotli", "deflate", "zstd"]
emulation = ["dep:http", "dep:serde", "dep:typed-builder"]
gzip = ["rquest/gzip"]
brotli = ["rquest/brotli"]
deflate = ["rquest/deflate"]
zstd = ["rquest/zstd"]

[dependencies]
http = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-builder = { version = "0.20.0", optional = true }
rquest = { version = "3.0.1-rc1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.1.0", default-features = false, features = [
    "http1",
    "http2",
    "client",
    "server",
] }
hyper-util = { version = "0.1.10", features = [
    "http1",
    "http2",
    "client",
    "client-legacy",
    "server-auto",
    "tokio",
] }
futures-util = { version = "0.3.0" }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
pin-project-lite = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"

[lib]
doctest = false

[[example]]
name = "emulation"
path = "examples/emulation.rs"
required-features = ["emulation", "gzip", "brotli", "deflate", "zstd", "rquest/full"]
