[package]
name = "rquest-util"
description = "Common utilities for rquest"
repository = "https://github.com/0x676e67/rquest-util"
documentation = "https://docs.rs/rquest-util"
authors = ["0x676e67 <gngppz@gmail.com>"]
version = "0.2.0"
readme = "README.md"
license = "GPL-3.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["emulation", "gzip", "brotli", "deflate", "zstd"]

# Emulation devices
emulation = ["dep:http", "dep:serde", "dep:typed-builder"]

# Emulation devices with random data
emulation-rand = ["emulation", "dep:strum_macros", "dep:strum"]

# Compression algorithms
gzip = ["rquest/gzip"]
brotli = ["rquest/brotli"]
deflate = ["rquest/deflate"]
zstd = ["rquest/zstd"]

[dependencies]
rquest = { version = "3.0.1", default-features = false }
http = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-builder = { version = "0.20.0", optional = true }
strum = { version = "0.27.1", optional = true }
strum_macros = { version = "0.27.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.1.0", default-features = false, features = [
    "http1",
    "http2",
    "client",
    "server",
] }
hyper-util = { version = "0.1.10", features = [
    "http1",
    "http2",
    "client",
    "client-legacy",
    "server-auto",
    "tokio",
] }
futures-util = { version = "0.3.0" }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
pin-project-lite = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"

[lib]
doctest = false

[[example]]
name = "emulation"
path = "examples/emulation.rs"
required-features = ["emulation", "gzip", "brotli", "deflate", "zstd", "rquest/full"]


[[example]]
name = "emulation_rand"
path = "examples/emulation_rand.rs"
required-features = ["emulation", "gzip", "brotli", "deflate", "zstd", "rquest/full", "emulation-rand"]

[[example]]
name = "emulation_option"
path = "examples/emulation_option.rs"
required-features = ["emulation", "gzip", "brotli", "deflate", "zstd", "rquest/full"]
